--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "electron": "~1.6.2"
   },
@@ -28,6 +29,9 @@
   "babel": {
     "presets": [
       "react"
+    ],
+    "plugins": [
+      "transform-class-properties"
     ]
   }
 }
