--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "font-explorer",
+  "productName": "Font Explorer",
   "version": "1.0.0",
   "description": "An application to explore the fonts installed on your system",
   "main": "main.js",
@@ -18,7 +19,8 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "electron": "~1.6.2"
+    "electron": "~1.6.2",
+    "electron-packager": "^8.7.2"
   },
   "dependencies": {
     "prop-types": "^15.5.10",
