add package script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "babel src --out-dir dist"
+    "build": "babel src --out-dir dist",
+    "package": "electron-packager . --out=builds"
   },
   "repository": "https://github.com/drazik/font-explorer",
   "keywords": [
