--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "babel src --out-dir dist",
+    "build": "webpack",
+    "build:watch": "webpack -w",
     "package": "npm run build && electron-packager . --out=builds"
   },
   "repository": "https://github.com/drazik/font-explorer",
@@ -18,24 +19,18 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "electron": "~1.6.2",
-    "electron-packager": "^8.7.2"
+    "electron-packager": "^8.7.2",
+    "webpack": "^3.5.5"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "styled-components": "^2.1.1",
+    "emotion": "^7.2.0",
+    "preact": "^8.2.1",
+    "preact-emotion": "^7.2.0",
     "system-font-families": "^0.5.0"
-  },
-  "babel": {
-    "presets": [
-      "react"
-    ],
-    "plugins": [
-      "transform-class-properties"
-    ]
   }
 }
